some contrast fixes

--- a/src/styles/main/contrast.scss
+++ b/src/styles/main/contrast.scss
@@ -56,6 +56,12 @@ body.contrast{
 
 	// ONLY COLOR
 	.link-to-all,
+	.pagination > button,
+	.section-info h2,
+	.section-info .section-title .name-info,
+	.header-actions .link,
+	.map-popup-info__extra a,
+	.map-popup-info__top a,
 	.main-menu a,
 	.carousel__head > a,
 	.footer-main__address_heading,
@@ -82,6 +88,12 @@ body.contrast{
 
 
 	// BACKGROUND BLACK AND COLOR CONTRAST
+	.map-with-pins-filtering-info,
+	.form-select__label,
+	.full-page-loader,
+	.page-header-section,
+	.page-title,
+	.map-popup-info,
 	.pictures-slider__circles button,
 	.text-link-expandable-info,
 	.two-carousels-one-row > div:nth-child(2),
@@ -94,6 +106,10 @@ body.contrast{
 
 	// BG BLACK + FONT CONTRAST + BORDER CONTRAST
 	.breadcrumbs,
+	.arrows > button:disabled,
+	.pic-text-info__info,
+	.share-button,
+	.share-button-wrapper > .share-button-list > button, .share-button-wrapper > .share-button-list > a,
 	.text-link-pic,
 	.footer-main,
 	.main-menu,
@@ -117,9 +133,10 @@ body.contrast{
 
 	// BG CONTRAST AND COLOR BLACK
 	.arrows > button:hover,
+	.pagination > button.active,
 	.text-link-expandable-info__expandable_head{
 		background: $contrast;
-		color: #000;
+		color: #000 !important;
 	}
 
 
